fix navbar collapsing issue

--- a/src/app/structural_components/nav-bar/nav-bar.component.css
+++ b/src/app/structural_components/nav-bar/nav-bar.component.css
@@ -30,6 +30,6 @@ nav {
 
 @media only screen and (max-width: 518px) {
   .navbar-right {
-    margin-left: 0;
+    margin-left: -15px;
   }
 }
